--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,9 @@
-syntax: glob
-
-/overlays
-/target/
-/bin/
-
-/src/main/resources/rebel.xml
-/src/main/webapp/resources/
-/src/main/webapp/static/
-
-/src/main/webapp/data/
-/src/main/webapp/*.js
-
-/src/main/webapp/index.html
-
-/DC.key
-/DC.data
-
-/demo.iml
-
-.settings/
-.classpath
-.project
-.DS_Store
-.idea
+**/.idea
+**/*.iml
+**/target/
+**/.DS_Store
+**/.project
+**/.classpath
+**/.settings
+**/.factorypath
+**/.vscode
