--- a/multithread/pom.xml
+++ b/multithread/pom.xml
@@ -5,20 +5,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.liuil</groupId>
-  <artifactId>code-libary</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>multithread</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>multithread</module>
-  </modules>
 
-  <name>code-libary</name>
+  <name>multithread</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -31,16 +26,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>19.0</version>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.62</version>
+      <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>com.alibaba.otter</groupId>
-      <artifactId>canal.client</artifactId>
-      <version>1.0.12</version>
-    </dependency>
-
   </dependencies>
 
   <build>
