feat: 调整pom.xml

--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -4,13 +4,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.liuil</groupId>
-  <artifactId>multithread</artifactId>
+  <parent>
+    <groupId>com.liuil</groupId>
+    <artifactId>java-code-library</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
+  <artifactId>multi-thread</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>multithread</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>multi-thread</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,13 +25,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
-      <version>1.2.62</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
